# Coin-Op-App

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
abis/: Fulfiller.json
sparrow/src/: config.rs  main.rs
sparrow/src/quantify/: pair_matrix.rs
sparrow/src/sample/: uniform_sampler.rs
sparrow/src/util/: terminator.rs
sparrow/tests/: tests.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  package-lock.json  package.json  svg_crop.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/output/: log.txt
src-tauri/src/: lib.rs  main.rs  pattern_export.rs  pattern_nesting.rs  professional_patterns.rs  subgraph.rs
src/abis/: CustomComposite.json  Market.json  index.ts
src/components/About/modules/: About.tsx
src/components/Account/hooks/: useWallet.ts
src/components/Account/modules/: Account.tsx
src/components/Activity/hooks/: useCheckAppData.ts  useDesignStorage.ts  useFileStorage.ts
src/components/Activity/modules/: Activity.tsx  DeleteConfirmationModal.tsx  DesignCard.tsx  LibraryCard.tsx
src/components/Activity/types/: activity.types.ts
src/components/Blender/hooks/: useBlender.ts
src/components/Blender/modules/: Blender.tsx
src/components/Blender/types/: blender.types.ts
src/components/ComfyUI/hooks/: useComfyUI.ts  useComfyUIModels.ts  useConnectionRenderer.ts  useGenericNode.ts  useNodeCanvas.ts  useNodeInput.ts  (+1 more)
src/context/: AppContext.tsx  CartContext.tsx  DesignContext.tsx  LanguageContext.tsx  LibraryContext.tsx
src/i18n/: index.ts
src/lib/: constants.ts  defaultLibrary.ts  imageUtils.ts  network.ts
src/types/: global.d.ts
(+92 files in other folders)
