[package]
name = "coinop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "coinop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
image = { version = "0.24", features = ["png", "jpeg", "tiff"] }
crc32fast = "1.3"
printpdf = "0.7"
rand = { version = "0.9", features = ["small_rng"] }
jagua-rs = { features = ["spp"], git = "https://github.com/JeroenGar/jagua-rs.git", rev = "a7bd8e9a85ceca57dbc61e4188a06f7e1facb461"}
sparrow = { path = "../sparrow" }
anyhow = "1.0"
roxmltree = "0.18"
regex = "1.0"
once_cell = "1.19"
usvg = "0.45"
svg2pdf = "0.13"
pdf-writer = "0.12"
fontdb = "0.23"
lopdf = "0.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
